Thu Dec  2 18:29:36 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.{h cpp} (timestamp): Changed the format produced from
          ACE::timestamp() from ctime-ish "Day Mon dd hh:mm:ss yyyy" to
          ISO-8601 yyyy-mm-dd hh:mm:ss.mmmmmm. Thank you to Thomas
          Lockhart for this fix. Resolves Bugzilla #3210.
          Also fixed up the doxygen comments related.

        * ace/Log_Record.cpp (format_msg): VERBOSE[_LITE] timestamp also
          changed to ISO-8601 format but uses 3 decimal places after secs.

        * NEWS: Described above change for users.

Mon Nov 29 17:20:47 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:

          Added Shi John <John dot Shi at acxiom dot com>.

Fri Nov 26 17:36:10 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/os_include/os_pthread.h: Removed the #defines for
          PTHREAD_CANCEL_{ENABLE, DISABLE, DEFERRED, ASYNCHRONOUS}. They
          were breaking the LynxOS build (LynxOS sets these via enum, not
          macro). If a platform doesn't have these symbols then the
          ACE_LACKS_PTHREAD_CANCEL config setting should be used to avoid
          code that references them.

Thu Nov 25 12:17:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.h:
        * ace/OS_NS_unistd.cpp:
          Removed not enabled ftruncate workaround

        * ace/Env_Value_T.h:
          Doxygen change

        * ace/OS_NS_sys_utsname.cpp:
        * ace/OS_NS_sys_wait.cpp:
        * ace/OS_NS_time.cpp:
        * ace/OS_NS_wchar.cpp:
          Layout changes

Tue Nov 23 23:20:07 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/os_include/os_pthread.h: Give definite values to THR_CANCEL_*
          flags - using the PTHREAD_CANCEL_* values gives the THR_CANCEL_*
          options overlapping bits making it impossible to distinguish them.

        * ace/Base_Thread_Adapter.{h, cpp}:
        * ace/OS_NS_Thread.cpp (thr_create):