@@ -11,7 +11,7 @@
 int
 ACE_TMAIN (int, ACE_TCHAR *[])
 {
-  ACE_TCHAR day_and_time[35];
+  ACE_TCHAR day_and_time[27];
   ACE::timestamp (day_and_time,
                   sizeof day_and_time);
 
